--- a/Web Development/week 6/Assignment/Currency Converter.html
+++ b/Web Development/week 6/Assignment/Currency Converter.html
@@ -29,7 +29,7 @@
             document.getElementById("converter").value = event * inputVal;
             }
        </script>
-        <title>Currancy Converter</title>
+        <title>Currency Converter</title>
     </head>
     <body>
         
@@ -42,7 +42,7 @@
                     Amount
                 </label><br>
                 <input style="padding: 10px;border-radius: 6px;width: 100%;"  placeholder="Input Value" type="number"
-                min="1" value="1" name="Currancy" id="curr"><br>
+                min="1" value="1" name="Currency" id="curr"><br>
                 <br> <label>Currency</label><br>
                 <select onchange="calCulate(value)" id="selVal" name="selector" style="padding: 10px;border-radius: 6px;width: 100%;">
                     <option disabled selected>Select Currancy</option>
